# live_stat

./: .gitignore  claudeSession.md  package-lock.json  package.json  setting.json  skill.md  start.js  start_watcher.js
.claude/: settings.local.json
app/: page.tsx
app/api/leaderboard/: route.ts
app/api/live/: route.ts
app/api/stream/: route.ts
app/api/watcher/: route.ts
app/tdm_match/: page.tsx
apps/cloud/: .env.local.example  .gitignore  middleware.ts  package.json
apps/cloud/app/: globals.css  layout.tsx  loading.tsx
apps/cloud/components/: AuthProvider.tsx  Avatar.tsx  DataTable.tsx  QueryProvider.tsx  SetupOrgPrompt.tsx  SidebarNav.tsx  ThemeProvider.tsx  TopPlayersWidget.tsx
apps/cloud/lib/: types.ts
apps/cloud/scripts/: e2e_cleanup.mjs  e2e_seed_export.mjs
apps/cloud/supabase/: schema.sql  seed_test_data.sql
apps/local/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/local/app/: globals.css  layout.tsx  page.tsx
apps/local/components/: BrandOverlay.tsx  DashboardShell.tsx  EliminationAlertWidget.tsx  KillFeedWidget.tsx  LiveLeaderboard.tsx  LiveStandingsWidget.tsx  MatchInfoWidget.tsx  MatchLeaderboardSidebar.tsx  MatchResultsWidget.tsx  MatchStatusWidget.tsx  (+10 more)
apps/local/src-tauri/: Cargo.toml  tauri.conf.json
apps/local/src-tauri/src/: lib.rs  main.rs
components/: Layout.tsx  LiveLeaderboard.tsx
lib/: parser.ts  pcobLogWatcher.ts  pcobStore.ts  types.ts
mock/e2e-cloud-to-local/: README.md  README.txt  TeamLogoAndColor.ini  install.ps1  roster_mapping.json  seed.json
(+197 files in other folders)
